Fixed FEC image being too big

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,4 +77,6 @@ form {
 
 .fec img {
     margin-top: 1em;
+    max-width: 100%;
+    max-height: 350px;
 }
